fix spacing

--- a/src/Pages/Home/homeGrid.module.css
+++ b/src/Pages/Home/homeGrid.module.css
@@ -1,4 +1,5 @@
 .grid{
     display: flex;
     width: 100%;
+    flex-wrap: wrap;
 }
