--- a/src/Pages/Home/homeGridItem.module.css
+++ b/src/Pages/Home/homeGridItem.module.css
@@ -2,7 +2,10 @@
     display: flex;
     padding:16px;
     height: 33vh;
-    width: 33vw;
+    flex-grow: 1;
+    flex-shrink: 1;
+    min-width: 33vh;
+    max-width: 50vw;
 }
 
 .inner{
@@ -10,6 +13,7 @@
     border: 1px solid var(--neutral-light);
     width: 100%;
     height: 100%;
+    background: var(--neutral-dark);
 }
 
 .itemLong{
